added gh-pages stuff

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "personal-website-v2",
+  "homepage": "https://leebianca.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
