--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-website-v2",
-  "homepage": "https://leebianca.github.io/",
+  "homepage": "https://leebianca.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
